# Omni

./: .gitignore  AGENTS.md  Cargo.toml  check_errors.txt
dummy_plugin/: Cargo.toml
dummy_plugin/src/: lib.rs
omni_engine/: Cargo.toml
omni_engine/src/: assets.rs  commands.rs  delay.rs  engine.rs  export.rs  graph.rs  lib.rs  mixer.rs  nodes.rs  plugin_node.rs  recorder.rs  resampler.rs  sequencer.rs  tests_recording.rs  transport.rs
omni_host/: Cargo.toml
omni_host/src/: arrangement_ui.rs  main.rs  project_io.rs  sequencer_ui.rs
omni_host/src/ui/: device.rs  mixer.rs  mod.rs  note_expressions.rs  piano_roll.rs  session.rs  theme.rs  widgets.rs
omni_plugin_host/: Cargo.toml  check_clap.rs
omni_plugin_host/src/: clap_wrapper.rs  main.rs  vst3_defs.rs  vst3_wrapper.rs
omni_shared/: Cargo.toml
omni_shared/src/: lib.rs  performance.rs  project.rs  scale.rs
