[package]
name = "omni_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
bincode = "1.3"
cpal = "0.17.1"
crossbeam-channel = "0.5.15"
omni_shared = { version = "0.1.0", path = "../omni_shared" }
petgraph = "0.8.3"
rayon = "1.11.0"
shared_memory = "0.12.4"
uuid = "1.20.0"
serde_json = "1.0"
