[package]
name = "omni_host"
version = "0.1.0"
edition = "2021"

[dependencies]
omni_shared = { path = "../omni_shared" }
omni_engine = { path = "../omni_engine" }
anyhow = "1.0"
shared_memory = "0.12"
bincode = "1.3"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
crossbeam-channel = "0.5"
eframe = "0.33.3"
