[package]
name = "omni_plugin_host"
version = "0.1.0"
edition = "2021"

[dependencies]
omni_shared = { path = "../omni_shared" }
anyhow = "1.0"
shared_memory = "0.12"
bincode = "1.3"
base64 = "0.22.1"
libloading = "0.9.0"
libc = "0.2"
clap-sys = { version = "0.5" }
winit = { version = "0.29", features = ["x11"] }
raw-window-handle = "0.6"
uuid = { version = "1.4", features = ["v4", "serde"] }
lazy_static = "1.4"
